added two number, digits summation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,10 @@
         "javascript": false,
         "c": false,
         "cpp": false
+    },
+    "files.associations": {
+        "*.ejs": "html",
+        "functional": "c",
+        "cmath": "c"
     }
 }
