--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "files.associations": {
         "*.ejs": "html",
         "functional": "c",
-        "cmath": "c"
+        "cmath": "c",
+        "stdio.h": "c"
     }
 }
