--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -1,23 +1,22 @@
 name: C/C++ CI
 
 on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+    push:
+        branches: ["develop"]
+    pull_request:
+        branches: ["develop"]
 
 jobs:
-  build:
+    build:
+        runs-on: ubuntu-latest
 
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v3
-    - name: configure
-      run: ./configure
-    - name: make
-      run: make
-    - name: make check
-      run: make check
-    - name: make distcheck
-      run: make distcheck
+        steps:
+            - uses: actions/checkout@v3
+            - name: configure
+              run: ./configure
+            - name: make
+              run: make
+            - name: make check
+              run: make check
+            - name: make distcheck
+              run: make distcheck
